# natter

./: .gitignore  Makefile.am  Makefile.in  README.markdown  configure.ac
examples/: dns_srv.cfg  inetrc  standard.cfg
src/: .gitignore  Makefile.am  natter_auth.erl  natter_connection.erl  natter_dispatcher.erl  natter_expat.c  natter_logger.erl  natter_packet_engine.erl  natter_packetizer.erl  natter_parser.erl  natter_parser_util.erl  natter_srv.erl  natter_stanza_inspector.erl  natter_util.erl  typespecs.hrl
tests/: Emakefile  Makefile.am  test_natter_dispatcher.erl  test_natter_packetizer.erl  test_natter_parser.erl  test_suite.erl
